[package]
name = "rust_srcutils"
version = "0.1.0"
authors = ["Moises Gomez <moisesgomezgiron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
clap = "3.0.0-beta.2"

[[bin]]
name = "javaheaders"
